--- a/projects/health-app/src/styles.scss
+++ b/projects/health-app/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background: #edf1fb;
+  font-family: Noto Sans, sans-serif;
+}
+
+button, input {
+  font-family: Noto Sans, sans-serif;
+}
