--- a/projects/health-app/src/app/containers/app/app.component.scss
+++ b/projects/health-app/src/app/containers/app/app.component.scss
@@ -7,3 +7,12 @@
   width: 96%;
   margin: 0 auto;
 }
+
+.app-name {
+  width: 100%;
+  font-family: Noto Sans, sans-serif;
+  font-weight: 600;
+  font-size: 32px;
+  text-align: center;
+  margin-top: 26px;
+}
