--- a/projects/health-app/src/auth/shared/components/auth-form/auth-form.component.scss
+++ b/projects/health-app/src/auth/shared/components/auth-form/auth-form.component.scss
@@ -9,12 +9,14 @@
     font-weight: 400;
     margin: 10px 0 0;
   }
+
   h1 {
     margin: 0 0 25px;
     font-size: 20px;
     font-weight: 700;
     text-align: center;
   }
+
   button {
     cursor: pointer;
     outline: 0;
@@ -27,15 +29,18 @@
     font-size: 16px;
     font-weight: 600;
     transition: all 0.2s ease-in-out;
+
     &:hover {
       background: darken(#158837, 5%);
       border-color: darken(#106529, 5%);
     }
+
     &:disabled {
       opacity: .4;
       cursor: not-allowed;
     }
   }
+
   a {
     display: block;
     text-align: center;
@@ -47,15 +52,17 @@
 
 .auth-form {
   background: #fff;
-  box-shadow: 0 3px 4px rgba(0,0,0,.1);
+  box-shadow: 0 3px 4px rgba(0, 0, 0, .1);
   border-radius: 3px;
   border: 1px solid #c1cedb;
   width: 400px;
   margin: 50px auto;
   padding: 30px;
+
   &__action {
     margin: 10px 0 30px;
   }
+
   &__toggle {
     border-radius: 0 0 3px 3px;
     border-top: 1px solid #c1cedb;
@@ -63,11 +70,13 @@
     padding: 10px;
     margin: 0 -30px -30px;
   }
+
   label {
     display: block;
     margin: 0;
     width: 368px;
   }
+
   input {
     outline: 0;
     font-size: 15px;
@@ -78,12 +87,15 @@
     color: #000;
     border: 1px solid #d1deeb;
     text-align: center;
+
     &::-webkit-input-placeholder {
       color: #a5a5a5;
     }
+
     &[type=email] {
       border-radius: 3px 3px 0 0;
     }
+
     &[type=password] {
       border-radius: 0 0 3px 3px;
       margin: -1px 0 0;
