--- a/projects/health-app/src/health/workouts/containers/workouts/workouts.component.scss
+++ b/projects/health-app/src/health/workouts/containers/workouts/workouts.component.scss
@@ -43,8 +43,9 @@
   border-radius: 50px;
   padding: 6px 20px 6px 15px;
   text-transform: uppercase;
+  text-decoration: none;
   font: {
-    weight: 600;
+    weight: 400;
     size: 13px;
   }
 
