--- a/projects/health-app/src/health/meals/components/meal-form/meal-form.component.scss
+++ b/projects/health-app/src/health/meals/components/meal-form/meal-form.component.scss
@@ -173,7 +173,7 @@
     outline: 0;
     border: 0;
     border-radius: 2px;
-    background: #39a1e7;
+    background: #158837;
     color: #fff;
     padding: 10px 18px;
     font-size: 16px;
@@ -182,7 +182,7 @@
     display: inline-block;
 
     &:hover {
-      background: darken(#39a1e7, 5%);
+      background: darken(#158837, 5%);
     }
 
     &:disabled {
