--- a/projects/health-app/src/health/schedule/components/schedule-days/schedule-days.component.scss
+++ b/projects/health-app/src/health/schedule/components/schedule-days/schedule-days.component.scss
@@ -15,7 +15,7 @@
   cursor: pointer;
 
   &:hover span {
-    background: #39a1e7;
+    background: #97c747;
     color: #fff;
   }
 
@@ -26,13 +26,13 @@
     padding: 7px 0 0;
     border-radius: 50%;
     width: 32px;
-    height: 32px;
+    height: 26px;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 400;
     transition: all .2s ease-in-out;
 
     &.active {
-      background: #39a1e7;
+      background: #158837;
       color: #fff;
     }
   }
